[package]
name = "pvz_mod"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
fern = { version = "0.7.1", features = ["colored"] }
minhook = { path = "D:\\Files\\Rust\\minhook" }
tracing = "0.1.43"
widestring = "1.2.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"] }
windows_wrapper = { path = "D:\\Files\\Rust\\windows_wrapper" }
