[package]
name = "loader"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1.12"

[dependencies]
config = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
windows_wrapper = { workspace = true }
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_Security"] }
rfd = "0.16.0"
